# encompass-database-operations

./: .gitignore  README.md  db_work_order_image_extract.py  dockerfile  logging_config.py  pyproject.toml
.github/workflows/: docker-build.yml
