[project]
name = "mysql-exporter"
version = "0.1.0"
description = "Export MySQL BLOB JSON rows to individual .json files with progress bar"
requires-python = ">=3.9"

dependencies = [
    "mysql-connector-python>=8.2",
    "Pillow>=10.0",        # ← KEPT (even if unused)
    "python-dotenv>=1.0",
    "orjson>=3.9",         # ← 10x faster JSON
    "tqdm>=4.66",          # ← progress bar
    "zstandard>=0.22",  # ← ADD THIS
    "psutil>=5.9",
    "azure-storage-blob>=12.23.0",
    "azure-identity>=1.20.0",
]

[build-system]
requires = ["uv>=0.2"]
build-backend = "uv"

[tool.uv]
package = false